# weflow

./: .env.example  README.md  README_CN.md  articles.json  pyproject.toml
src/weflow/: main.py
src/weflow/core/: crawler.py  formatter.py  image.py  llm.py  models.py  notifier.py  rss.py  storage.py  vision.py  wechat.py
tests/: verify_setup.py
